# bio-medRxiv

./: .gitignore  Anleitung Label Studio.docx  Anleitung_labeling-Team.docx  Indications_Matcher.md  Labelanleitung_2.0.md  LabelingInterface.txt  README.md  analyse_label_functions.ipynb  analyse_label_model.ipynb  anleitung_label_16.docx  apply_lf.py  bio-medrxiv.py  combine_labels.py  contrisnap.json  converten.py  convertenohnechecker.py  create_label_model.ipynb  data_extractor.py  doc_parser.py  doc_text.py  dummythrottler.py  export-script.py  extract_candidates.py  extract_features.py  extract_mentions.py  extract_tasks.ipynb  extract_tasks1.ipynb  fehlermeldung.txt  goldlabelimport.py  importnotebook.ipynb  labeled_contribution_samples.xlsx  labeled_contribution_samples_2.xlsx  labelstudio-to-fonduer-testing.ipynb  labelstudio_notizen.md  machine_learning_contributions.ipynb  machine_learning_contributions_2.ipynb  machine_learning_contributions_jk.ipynb  match_gold_label.py  matcher_abbreviations.py  matcher_sixteen_small_letter.py  (+14 more)
MeMoKBC/: README.md  pyproject.toml
MeMoKBC/src/MeMoKBC/definitions/: candidates.py
MeMoKBC/src/MeMoKBC/definitions/mentions/: mention_spaces.py  mention_subclasses.py
MeMoKBC/src/MeMoKBC/gold_label_matcher/: __init__.py  utils.py
MeMoKBC/src/MeMoKBC/pipeline/: matchers.py  utils.py
MeMoKBC/src/MeMoKBC/pipeline/lfs/: dummy_lfs.py  name_full_abbr_lfs.py  name_short_long_lfs.py  name_short_task_lfs.py
MeMoKBC/src/MeMoKBC/scripts/: apply_lf.py  doc_parser.py  extract_candidates.py  extract_features.py  extract_mentions.py
(+1057 files in other folders)
